[package]
name = "bitvec-perf-regression"
version = "0.1.0"
authors = ["Elie ROUDNINSKI <xademax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "=0.17.4"
perf-event = "0.4.5"
serde_json = "1.0"

[profile.release]
panic = "unwind"
lto = true
incremental = false
debug = true
